# gaming_researcher-using-crewai

./: Details.md  README.md  details.md  pyproject.toml
output/: gaming_report.md
src/gaming_researcher/: crew.py  main.py
src/gaming_researcher/config/: agents.yaml  tasks.yaml
