[project]
name = "gaming_researcher"
version = "0.1.0"
description = "gaming_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
gaming_researcher = "gaming_researcher.main:run"
run_crew = "gaming_researcher.main:run"
train = "gaming_researcher.main:train"
replay = "gaming_researcher.main:replay"
test = "gaming_researcher.main:test"
run_with_trigger = "gaming_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
